--- a/Task_02_News_Category_Classification.ipynb
+++ b/Task_02_News_Category_Classification.ipynb
@@ -1420,7 +1420,7 @@
         "id": "AxqNxP9thk2N",
         "outputId": "4d8a330e-d200-4a1a-c5a9-0caf78f563be"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1435,7 +1435,17 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "\u001b[1m390/750\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m16s\u001b[0m 46ms/step - accuracy: 0.7376 - loss: 0.7451"
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 45ms/step - accuracy: 0.7983 - loss: 0.5875 - val_accuracy: 0.9102 - val_loss: 0.2649\n",
+            "Epoch 2/5\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 35ms/step - accuracy: 0.9240 - loss: 0.2309 - val_accuracy: 0.9120 - val_loss: 0.2622\n",
+            "Epoch 3/5\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 38ms/step - accuracy: 0.9361 - loss: 0.1902 - val_accuracy: 0.9114 - val_loss: 0.2677\n",
+            "Epoch 4/5\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 34ms/step - accuracy: 0.9489 - loss: 0.1545 - val_accuracy: 0.9102 - val_loss: 0.2776\n",
+            "Epoch 5/5\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 35ms/step - accuracy: 0.9595 - loss: 0.1255 - val_accuracy: 0.9117 - val_loss: 0.2992\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9145 - loss: 0.2899\n",
+            "Neural Net Test Accuracy: 0.9117\n"
           ]
         }
       ]
